# TechHelp

./: .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.backup  README.md  alembic.ini  docker-compose.yml  main.py  promt.txt  pyproject.toml  requirements.txt
app/: config.py  logger.py
app/backup/: cronjob  run_backup.py  run_backup.sh
app/bot/: bot.py  filters.py  middlewares.py  middlewares_db.py  states.py
app/bot/handlers/: __init__.py  admin.py  main_group.py  service_messages.py  start.py  tech_group.py  tech_mirror.py  user_bot.py  user_poll.py
app/bot/keyboards/: admin_kb.py  main_group.py  user.py
app/bot/middlewares/: global_error.py  logging.py  throttling.py
app/cache/: redis.py
app/db/: database.py  models.py
app/db/crud/: message.py  tech.py  ticket.py  user.py
app/queue/: mirror_queue.py
app/services/: bridge.py  feedback.py  gspread_client.py  tickets.py
app/utils/: cache.py  pagination.py  permissions.py  redis_streams.py  session_decorator.py  startup_timeline.py  timezone.py  validators.py
app/web/: server.py
app/workers/: mirror_worker.py
